--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "react": "^18.0.0",
     "react-datepicker": "4.8.0",
     "react-dom": "^18.0.0",
-    "react-toastify": "9.0.5"
+    "react-toastify": "9.0.5",
+    "vercel": "^27.1.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
